--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/lumenCodes/imagery#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.0",
